...
  const val COUNTDOWN_DAYS = "event_view_countdown_days"
  const val TAGS_SECTION = "event_view_tags"
  const val SUBTITLE_TEXT = "event_view_subtitle_text"
  const val DESCRIPTION_TEXT = "event_view_description_text"
  const val CHAT_BUTTON = "event_view_chat_button"
  const val ACTION_BUTTONS_SECTION = "event_view_action_buttons_section"
  const val EDIT_EVENT_BUTTON = "event_view_edit_event_button"
  const val VISIT_WEBSITE_BUTTON = "event_view_visit_website_button"
  const val LOCATION_BUTTON = "event_view_location_button"
  const val LEAVE_EVENT_BUTTON = "event_view_leave_event_button"
  const val LOADING_INDICATOR = "event_view_loading_indicator"
  const val SCAN_QR_BUTTON = "event_view_scan_qr_button"
  const val QR_SCANNER_DIALOG = "event_view_qr_scanner_dialog"
...
  const val VALIDATION_RESULT_INVALID = "event_view_validation_result_invalid"
  const val VALIDATION_RESULT_ERROR = "event_view_validation_result_error"
  const val ATTENDEE_LIST_ITEM = "event_view_attendee_list_item"
  const val ATTENDEE_LIST_OWNER = "event_view_attendee_list_owner"
  const val ATTENDEE_LIST_CURRENT_USER = "event_view_attendee_list_current_user"
  const val ATTENDEE_LIST = "event_view_attendee_list"
  const val JOIN_BUTTON = "event_view_join_button"
  const val PARTICIPANTS_INFO = "event_view_participants_info"
  const val BASE_SCREEN = "event_view_base_screen"
  const val CREATE_POLL_BUTTON = "event_view_create_poll_button"
  const val VIEW_POLLS_BUTTON = "event_view_view_polls_button"
  const val POLL_NOTIFICATION_CARD = "event_view_poll_notification_card"
  const val OWNER_TAB_ROW = "event_view_owner_tab_row"
...
